# minimal-money

./: .gitignore  README.md
api/: pyproject.toml
